[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|migrations|node_modules|s3)"

[tool.poetry]
name = "tools"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.5.1"
wrapt = "^1.12.1"
pyinstaller = "^4.0"
jedi = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
