[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|migrations|node_modules|s3)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv'

[tool.poetry]
name = "tools"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.8"
requests = "^2.24.0"
docker = "^4.3.1"
requests-toolbelt = "^1.0.0"
GitPython = "^3.1.11"
PyGithub = "^1.53"
python-gitlab = "^2.5.0"
halo = "^0.0.31"
giturlparse = "^0.10.0"
tasklib = "^2.4.3"
PyYAML = "^6.0.2"
pyfzf = "^0.2.2"
redis = "^3.5.3"
contexttimer = "^0.3.3"
psutil = "^5.8.0"
pretty-errors = "^1.2.19"
tenacity = "^6.3.1"
click-didyoumean = "^0.0.3"
arrow = "^1.0.2"
libtmux = "^0.10.1"
pynvim = "^0.5.2"
notify-py = "^0.3.3"
pytz = "^2025.1"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
isort = "^6.0.0"
wrapt = "^1.12.1"
pyinstaller = "^5.3"
jedi = "^0.17.2"
staticx = "^0.11.0"
patchelf-wrapper = "^1.2.0"
six = "^1.15.0"
pudb = "^2019.2"
ptipython = "^1.0.1"
pytest = "^6.2.5"
black = "^25.1.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
